<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_A"
                    android:textColor="@color/textColor"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_A_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/pointsColor"
                    android:textSize="92sp" />

                <Button
                    android:id="@+id/three_points_A"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/three_points_style"
                    android:text="@string/three_points" />

                <Button
                    android:id="@+id/two_points_A"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/two_points_style"
                    android:text="@string/two_points" />

                <Button
                    android:id="@+id/free_throw_A"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/free_throw_style"
                    android:text="@string/free_throw" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/pointsColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_B"
                    android:textColor="@color/textColor"
                    android:textSize="32sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_B_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:textColor="@color/pointsColor"
                    android:textSize="92sp" />

                <Button
                    android:id="@+id/three_points_B"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/three_points_style"
                    android:text="@string/three_points" />

                <Button
                    android:id="@+id/two_points_B"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/two_points_style"
                    android:text="@string/two_points" />

                <Button
                    android:id="@+id/free_throw_B"
                    style="@style/PointsButtonStyle"
                    android:background="@drawable/free_throw_style"
                    android:text="@string/free_throw" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_button"
                style="@style/ScoreButtonStyle"
                android:layout_marginEnd="12dp"
                android:text="@string/reset_button" />

            <Button
                android:id="@+id/submit_button"
                style="@style/ScoreButtonStyle"
                android:text="@string/submit_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>